<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F38299"
    tools:context=".myheart">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="181dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/do_you_know_your_imc"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="@+id/textView45"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="110dp"
        android:layout_height="107dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButton17"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButton23"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/i_dont_know"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView45"
        android:layout_width="184dp"
        android:layout_height="32dp"
        android:text="@string/have_you_hypertension"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="110dp"
        android:layout_height="76dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView45">

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton21"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="110dp"
        android:layout_height="76dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toEndOf="@+id/radioGroup4"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton22"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            android:textColor="#020202"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:text="@string/are_you_diabetic"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:text="@string/have_you_a_parent_with_cardiac_problem"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.368" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:contentDescription="@string/to__do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/capture"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/gobackS"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="4dp"
        android:onClick="goBackStart"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="@+id/goSuivi"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/have_you_cholesterol_problem"
        android:textColor="#050505"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:text="@string/have_you_a_cardiac_desease"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="729dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="110dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup6"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup5"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/radioGroup5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:text="@string/maybe"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="110dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup4"
        app:layout_constraintStart_toStartOf="@+id/radioGroup4"
        app:layout_constraintTop_toBottomOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="110dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/no"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/goSuivi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:onClick="goSuivi"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gobackS"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup6"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>