<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6CDDDD"
    tools:context=".Suivi">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="214dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/mon_suivi_cardiaque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/suivi"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/have_you_ever_talked_about_your_heart_with_your_doctor"
            android:textColor="#040303"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/have_you_ever_did_a_heart_checkpoint"
            android:textColor="#040303"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/have_you_ever_had_an_appointment_with_a_cardiologist"
            android:textColor="#040303"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:onClick="gofinish"
            android:text="@string/Next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup12"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/previousHeart"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:onClick="goBackHeart"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="@+id/finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/finish"
            tools:ignore="TextContrastCheck" />

        <RadioGroup
            android:id="@+id/radioGroup12"
            android:layout_width="171dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="328dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioGroup13"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="70dp"
                    android:layout_height="53dp"
                    android:buttonTint="#040404"
                    android:text="@string/yes"
                    android:textColor="#050505"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioButton25"
                    android:layout_width="88dp"
                    android:layout_height="52dp"
                    android:buttonTint="#040404"
                    android:text="@string/no"
                    tools:ignore="DuplicateSpeakableTextCheck" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup13"
            android:layout_width="158dp"
            android:layout_height="56dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.008">

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:buttonTint="#040404"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#040404"
                    android:text="@string/no" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="166dp"
            android:layout_height="53dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.066">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:buttonTint="#040404"
                    android:text="@string/yes"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#040404"
                    android:text="@string/no"
                    tools:ignore="DuplicateSpeakableTextCheck" />
        </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>